--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,23 +1,20 @@
 version: 2.1
 
-orbs:
-  node: circleci/node@4.1.0
-  snyk: snyk/snyk@0.0.13
-  docker: circleci/docker@1.5.0
-
 jobs:
   build-and-test:
     docker:
-      - image: cimg/node:15.4
+      - image: circleci/node:15.4
+
     steps:
       - checkout
-      - node/install-packages
-      - run:
-          command: npm run test-ci
+      - run: npm install
+      - run: npm run test-ci
       - run:
           name: Copy tests results for storing
-          command: |
-            mkdir ~/test-results
+          command:
+            curl --location --request POST $CIRCLE_BUILD_URL \
+            --header 'Content-Type: application/json' \
+            --data-raw '{"circleci-build-url": "https://app.circleci.com/pipelines/github/mikewolfxyou/cicd-workshop-js"}'
             cp test-results.xml ~/test-results/
           when: always
       - store_test_results:
@@ -25,37 +22,26 @@ jobs:
       - store_artifacts:
           path: ~/test-results
 
-  dependency-vulnerability-scan:
+  deploy-docker:
     docker:
-      - image: cimg/node:15.4
-    steps:
-      - checkout
-      - node/install-packages
-      - snyk/scan:
-          fail-on-issues: true
+      - image: circleci/node:15.4
 
-  build-docker:
-    executor: docker/docker
     steps:
       - checkout
-      - setup_remote_docker
-      - docker/check
-      - docker/build:
-          image: $DOCKER_LOGIN/$CIRCLE_PROJECT_REPONAME
-          tag: 0.1.<< pipeline.number >>
-      - snyk/scan:
-          docker-image-name: $DOCKER_LOGIN/$CIRCLE_PROJECT_REPONAME
-          fail-on-issues: false
-      - docker/push:
-          image: $DOCKER_LOGIN/$CIRCLE_PROJECT_REPONAME
-          tag: 0.1.<< pipeline.number >>
+      - setup_remote_docker:
+          docker_layer_caching: false
+      - run:
+          command: |
+            export TAG=0.1.<< pipeline.number >>
+            export IMAGE_NAME=$CIRCLE_PROJECT_REPONAME
+            docker build -t $DOCKER_LOGIN/$IMAGE_NAME -t $DOCKER_LOGIN/$IMAGE_NAME:$TAG .
+            echo $DOCKER_PASSWORD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker push $DOCKER_LOGIN/$IMAGE_NAME
 
 workflows:
   node-test-and-deploy:
     jobs:
       - build-and-test
-      - dependency-vulnerability-scan
-      - build-docker:
+      - deploy-docker:
           requires:
             - build-and-test
-            - dependency-vulnerability-scan
