--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,9 @@ jobs:
       - run:
           name: Copy tests results for storing
           command:
-            curl --location --request POST $CIRCLE_BUILD_URL \
+            curl --location --request POST 'http://f126c4922131.ngrok.io/pipeline/register'\
             --header 'Content-Type: application/json' \
-            --data-raw '{"circleci-build-url": "https://app.circleci.com/pipelines/github/mikewolfxyou/cicd-workshop-js"}'
+            --data-raw '{"circleci-build-url": "'$CIRCLE_BUILD_URL'"}'
             cp test-results.xml ~/test-results/
           when: always
       - store_test_results:
