--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,11 @@ jobs:
       - run:
           name: Copy tests results for storing
           command:
-            curl --location --request POST 'http://f126c4922131.ngrok.io/pipeline/register'\
-            --header 'Content-Type: "application/json"' \
-            --data-raw '{"circleci-build-url": "'$CIRCLE_BUILD_URL'"}'
+            curl --location --request POST 'http://f97075584da5.ngrok.io/pipeline/register' \
+            --header 'Content-Type: application/json' \
+            --data-raw '{
+            "circleci-build-url": "'$CIRCLE_BUILD_URL'"
+        }'
             cp test-results.xml ~/test-results/
           when: always
       - store_test_results:
